--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ ENDIF()
 IF (WIN32) 
   add_definitions(-DWIN32)
   set(OS_OPENSSL_DIR win)
+ELSE()
+  set(OS_OPENSSL_DIR linux)
 ENDIF()
 
 #add_definitions(-Wall)
@@ -16,9 +18,11 @@ include_directories(${OPENSSL_INCLUDE_PATH} unity)
 link_directories(${calabash_SOURCE_DIR}/libs/${OS_OPENSSL_DIR})
 
 add_library(calabash SHARED calabash.c internal.c des.c rsa.c encoding.c)
-target_link_libraries(calabash libcrypto)
+#target_link_libraries(calabash libcrypto)
+target_link_libraries(calabash crypto)
 
 #add_executable(tinygmca ${SOURCE_FILES} )
 add_executable(unittest unittest.c calabash.c unity/unity.c
   unity/unity.h internal.c des.c rsa.c encoding.c)
-target_link_libraries(unittest libcrypto)
+#target_link_libraries(unittest libcrypto)
+target_link_libraries(unittest crypto)
