refactor:refactor sm4 files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ endif (OPENSSL_ROOT)
 
 add_subdirectory (test)
 
-add_library(calabash SHARED src/calabash.c src/utils.c src/des.c src/rsa.c src/encode.c)
+add_library(calabash SHARED src/calabash.c src/utils.c src/des.c src/rsa.c src/encode.c src/sm4.c)
 #target_link_libraries(calabash libcrypto)
 target_link_libraries (${PROJECT_NAME}  ${EXTRA_LIBS})
 
