--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,30 @@ add_library(calabash SHARED src/sm2.c src/utils.c src/des.c src/rsa.c src/encode
 #target_link_libraries(calabash libcrypto)
 target_link_libraries (${PROJECT_NAME}  ${EXTRA_LIBS})
 
+# add a target to generate API documentation with Doxygen
+ 
+FIND_PACKAGE(Doxygen)
+OPTION(BUILD_DOCUMENTATION "Create and install the HTML based API documentation (requires Doxygen)" ${DOXYGEN_FOUND})
+ 
+IF(BUILD_DOCUMENTATION)
+    IF(NOT DOXYGEN_FOUND)
+        MESSAGE(FATAL_ERROR "Doxygen is needed to build the documentation.")
+    ENDIF()
+ 
+    SET(doxyfile_in ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
+    SET(doxyfile ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+ 
+    CONFIGURE_FILE(${doxyfile_in} ${doxyfile} @ONLY)
+ 
+    ADD_CUSTOM_TARGET(doc
+        COMMAND ${DOXYGEN_EXECUTABLE} ${doxyfile}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        COMMENT "Generating API documentation with Doxygen"
+        VERBATIM)
+ 
+    INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION share/doc)
+ENDIF()
+
 # add the install targets
 install (TARGETS ${PROJECT_NAME} DESTINATION lib)
 install (DIRECTORY "${PROJECT_SOURCE_DIR}/include/calabash" DESTINATION include)
