add keyexchange and doxygen

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,5 @@ include_directories ("${PROJECT_SOURCE_DIR}/test/unity/include")
 
 set (EXTRA_LIBS ${EXTRA_LIBS} ${PROJECT_NAME})
 
-add_executable(run_unittest unittest.c unity/unity.c)
+add_executable(run_unittest unittest.c unity/unity.c test_keyexchange.c)
 target_link_libraries (run_unittest  ${EXTRA_LIBS})
