add kdf and change cmakelists

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,7 @@ include_directories ("${PROJECT_SOURCE_DIR}/test/unity/include")
 
 set (EXTRA_LIBS ${EXTRA_LIBS} ${PROJECT_NAME})
 
-add_executable(run_unittest unittest.c unity/unity.c test_keyexchange.c test_sm2.c test_secretbox.c test_sm4.c)
+aux_source_directory(./ TEST_SOURCE_FILES)
+
+add_executable(run_unittest unity/unity.c ${TEST_SOURCE_FILES})
 target_link_libraries (run_unittest  ${EXTRA_LIBS})
