--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,9 @@ endif (OPENSSL_ROOT)
 
 add_subdirectory (test)
 
-add_library(calabash SHARED src/sm2.c src/utils.c src/des.c src/rsa.c src/encode.c src/sm4.c src/keyexchange.c src/secretbox.c)
+aux_source_directory(src/ SOURCE_FILES)
+
+add_library(calabash SHARED ${SOURCE_FILES})
 #target_link_libraries(calabash libcrypto)
 target_link_libraries (${PROJECT_NAME}  ${EXTRA_LIBS})
 
